<resources>
    <string name="app_name">SPOD Mobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_info">Info</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_settings">Settings</string>
    <!-- Notification -->
    <string name="settings_notification_label">Notifications</string>
    <string name="settings_cocreation_label">CoCreation rooms</string>
    <string name="settings_cocreation_new_room_label">Room creation</string>
    <string name="settings_cocreation_join_label">Joining a room</string>
    <string name="settings_cocreation_comment_room_label">Commenting in a room</string>
    <string name="settings_cocreation_invite_room_label">Invited to a room</string>
    <string name="settings_cocreation_dataset_publication_label">New dataset published</string>
    <string name="settings_agora_label">Agora rooms</string>
    <string name="settings_agora_new_room_label">Room creation</string>
    <string name="settings_agora_comment_room_label">Commenting in a room</string>
    <string name="settings_agora_mention_label">Mentioned in a discussion</string>
    <string name="settings_agora_replay_label">Post reply</string>
    <string name="comment_notification_label">I want be notified when someone writes a comment</string>

    <string-array name="settings_menu_spinner">
        <item>Immediately</item>
        <item>Every day</item>
        <item>Every month</item>
    </string-array>


    <!-- Messages -->
    <string name="wait_network_message">Please wait...</string>
    <string name="unavailable_network_message">Network is not available!!!</string>


    <string name="bar_title">Spod</string>
    <!-- Login activity strings definitions -->
    <string name="login_activity_login">Login</string>
    <string name="login_activity_cancel">Reset</string>
    <string name="login_fragment_head_message">SPOD</string>
    <string name="login_fragment_username_hint">email</string>
    <string name="login_fragment_password_hint">password</string>
    <string name="login_fragment_forgot_password_string">Forgot your password</string>
    <string name="login_fragment_create_account_string">Create an Account</string>

    <!-- Cocreation section  -->
    <!--Create new room-->
    <string name="cocreation_room_head_message">New room</string>
    <string name="cocreation_room_list_message">Cocreation rooms</string>
    <string name="cocreation_room_new_room_name_string">Name</string>
    <string name="cocreation_room_new_room_subject_string">Subject</string>
    <string name="cocreation_room_new_room_goal_string">Goal</string>
    <string name="cocreation_room_new_room_invitation_text_string">Invitation text</string>
    <string name="cocreation_room_new_room_description_string">Description</string>
    <string name="cocreation_room_new_room_add_button">Add new room</string>
    <string name="cocreation_room_data_dataset">Dataset</string>
    <string name="cocreation_room_data_metadata">Metadata</string>
    <string name="cocreation_room_data_notes">Notes</string>
    <string name="cocreation_room_data_discussion">Discussion</string>
    <string name="cocreation_room_data_datalets">Datalets</string>
    <string name="cocreation_room_data_invite_members">Invite friends</string>
    <string name="cocreation_room_kwoledge_datalets">Datalets</string>
    <string name="cocreation_room_kwoledge_explore">Explore</string>
    <string name="cocreation_room_kwoledge_ideas">Ideas</string>
    <string name="cocreation_room_kwoledge_outcome">Outcome</string>
    <string name="cocreation_button_join_label">Join</string>
    <string name="cocreation_bottom_bar_members_add_members">Add members</string>
    <string name="cocreation_room_add_users_no_selection">Thare are no users selected</string>

    <!--Gallery-->
    <string name="cocreation_room_gallery_add_item_button">Add an item</string>
    <!--New item in a gallery-->
    <string name="cocreation_room_gallery_add_item_title_string">Title</string>
    <string name="cocreation_room_gallery_add_item_description_string">Here the description for the new item</string>
    <string name="cocreation_room_gallery_add_item_upload_button">Upload</string>

    <!--Agora-->
    <string name="agora_room_list_message">Agora rooms</string>
    <string name="agora_room_list_views_label">Views</string>
    <string name="agora_room_list_comments_label">Comments</string>
    <string name="agora_room_list_opendata_label">Opendata</string>
    <string name="agora_comment_replay_label">reply</string>
    <string name="agora_comment_add_hint">Add a comment</string>
    <string name="comment_add_empty_comment_warning">The comment cannot be empty</string>

    <!--Newsfeed-->
    <string name="newsfeed_title">Newsfeed</string>
    <string name="newsfeed_image_transition_name">image_transition</string>
    <string name="newsfeed_show_friends_activities">Show only my friends\' activities</string>
    <string name="newsfeed_base_post_comments_string">Comments</string>
    <string name="newsfeed_base_post_likes_string">Likes</string>
    <string name="newsfeed_send_text">SEND</string>
    <string name="newsfeed_empty_field">This field cannot be empty</string>
    <string name="newsfeed_empty_field_or_attachment">Please insert a message or an attachment</string>
    <string name="newsfeed_no_comments">No comments here\nBe the first to write a comment!</string>
    <string name="newsfeed_write_comment">Write a comment</string>
    <string name="newsfeed_pick_from_gallery">Pick from gallery</string>
    <string name="newsfeed_take_photo">Take a photo</string>
    <string name="newsfeed_choose_image">Select an image</string>
    <string name="newsfeed_delete_attachment_message">Are you sure to delete this attachment?</string>
    <string name="newsfeed_delete_confirm">Are you sure to delete this?</string>
    <string name="newsfeed_insert_text">Insert text here</string>
    <string name="newsfeed_select_reason">Select reason</string>
    <string name="newsfeed_slow_connection">Something goes wrong</string>
    <string name="newsfeed_retry">Retry</string>
    <string name="newsfeed_load_more">Load More</string>
    <string name="newsfeed_like_button_tip">Tip: Click on Like button to like this post\nor long click to see who liked it</string>
    <string name="newsfeed_view_more">View More</string>
    <string name="newsfeed_view_less">View Less</string>
    <string name="newsfeed_spam">Spam</string>
    <string name="newsfeed_offence">Offence</string>
    <string name="newsfeed_illegal">Illegal</string>
    <string name="newsfeed_view_not_authorized">You cannot see this feed</string>
    <string name="newsfeed_write_not_authorized">You cannot write on this feed</string>
    <string name="newsfeed_link">Link</string>
    <string name="newsfeed_text_image">Text and images</string>
    <string name="newsfeed_insert_link">Insert link</string>
    <string name="newsfeed_no_camera_app">No camera app found</string>
    <string name="newsfeed_paste">Paste</string>
    <string name="newsfeed_link_select_image">Click here to choose an image</string>
    <string name="newsfeed_user_info_feed_tab">Feed</string>
    <string name="newsfeed_user_info_info_tab">Info</string>
    <string name="newsfeed_user_info_page_basic">Basic</string>
    <string name="newsfeed_user_info_page_username">Username</string>
    <string name="newsfeed_user_info_page_gender">Gender</string>
    <string name="newsfeed_user_info_page_join">Join Date</string>
    <string-array name="newsfeed_flag_reason">
        <item>spam</item>
        <item>offence</item>
        <item>illegal</item>
    </string-array>

    <!-- Geoservice  -->
    <string name="service_not_available">Geoservice not available</string>
    <string name="invalid_lat_long_used">Invalid lat long used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="google_maps_api_key">AIzaSyCyx35Mv7TJQZuMsIVyLK_n--HinmfphI0</string>

    <!-- DrawOnTopApp message  -->
    <!-- Main Activity -->
    <string name="main_activity_notwork_connection_off">Network connection off</string>
    <string name="main_activity_gps_off">GPS off</string>
    <string name="main_activity_storage_permission_off">Without sdcard permission you cannot create new item in the cocreation room</string>
    <!-- Cocreation -->
    <string name="cocreation_gps_not_available">Unable to get position, please check gps!!!</string>
    <string name="cocreation_fill_form_correctly">Please fill form correctly!!!</string>
    <string name="cocreation_room_created">Room created</string>

    <!-- Firebase notificatin : name format => 'PLUGIN_ACTION_notification_message' -->
    <string name="notification_channel_name">SpodMobileNotificationChannel</string>
    <string name="notification_channel_description">Spod Mobile Notification Channel</string>

    <!--Global strings-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string-array name="spod_endpoints_array">
        <item>spod.routetopa.eu</item>
        <item>spod.databenc.it</item>
        <item>prato.routetopa.eu</item>
        <item>nl-spod.routetopa.eu</item>
        <item>dublin-spod.routetopa.eu</item>
        <!--<item>issy.routetopa.eu</item>-->
        <!--<item>groningen.routetopa.eu</item>-->
        <!--<item>denhaag.routetopa.eu</item>-->
        <!--<item>opendata-crc.di.unisa.it</item>-->
        <!--<item>ddac-spod.routetopa.eu</item>-->
    </string-array>

    <string-array name="cocreation_search_menu_spinner">
        <item>All room</item>
        <item>Media room</item>
        <item>Data room</item>
        <item>Knowledge room</item>
    </string-array>

    <string-array name="cocreation_room_user_status">
        <item>Joined</item>
        <item>Pending</item>
        <item>Not invited</item>
    </string-array>

    <string-array name="cocreation_room_user_status_colors">
        <item>#4CAF50</item>
        <item>#F44336</item>
        <item>#00BCD4</item>
    </string-array>

    <string-array name="cocreation_room_members_search_spinner">
        <item>All</item>
        <item>Joined</item>
        <item>Pending</item>
        <item>Not invited</item>
        <item>Selected</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
