<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/cocreation_room_data_menu_dataset"
        android:title="@string/cocreation_room_data_dataset"
        android:color="#FFFFFF"
        android:icon="@drawable/ic_grid_on_white_24dp"
        android:checked="true"/>

    <item android:id="@+id/cocreation_room_data_menu_metadata"
        android:title="@string/cocreation_room_data_metadata"
        android:color="#FFFFFF"
        android:icon="@drawable/ic_local_offer_white_24dp" />

    <item android:id="@+id/cocreation_room_data_menu_notes"
        android:title="@string/cocreation_room_data_notes"
        android:color="#FFFFFF"
        android:icon="@drawable/ic_description_white_24dp" />

    <item android:id="@+id/cocreation_room_data_menu_discussion"
        android:title="@string/cocreation_room_data_discussion"
        android:color="#FFFFFF"
        android:icon="@drawable/ic_forum_white_24dp" />

    <item android:id="@+id/cocreation_room_data_menu_datalets"
        android:title="@string/cocreation_room_data_datalets"
        android:color="#FFFFFF"
        android:icon="@drawable/ic_assessment_white_24dp" />

</menu>