<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="eu.spod.isislab.spodapp.fragments.newsfeed.NewsfeedFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/newsfeed_post_list_swipe_refresh_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/newsfeed_post_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/newsfeed_post_item_empty">
                </android.support.v7.widget.RecyclerView>

                <Switch
                    android:id="@+id/newsfeed_show_friends_activities_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newsfeed_show_friends_activities"
                    android:padding="@dimen/newsfeed_post_content_padding_small"
                    android:textColor="@android:color/white"/>
            </FrameLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/newsfeed_add_post_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorPrimaryDark">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/newsfeed_add_link_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            android:src="@drawable/ic_link_white_rotate_24dp"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorPrimaryDark"
            app:fab_label="@string/newsfeed_link"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/newsfeed_add_text_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            android:src="@drawable/ic_text_image_white_24dp"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorPrimaryDark"
            app:fab_label="@string/newsfeed_text_image"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
