<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="@dimen/newsfeed_post_content_padding_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profile_view_info_base_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newsfeed_user_info_page_basic"
                    android:gravity="center"
                    android:textSize="@dimen/newsfeed_post_status_text_default"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">
                    <TableRow
                        android:layout_width="0dp">
                        <TextView
                            android:id="@+id/profile_view_info_username_label"
                            android:text="@string/newsfeed_user_info_page_username"
                            android:textSize="@dimen/newsfeed_post_status_text_default"
                            android:textStyle="bold"
                            android:padding="@dimen/newsfeed_post_content_padding_small"
                            android:layout_gravity="end"/>
                        <TextView
                            android:id="@+id/profile_view_info_username_value"
                            android:textSize="@dimen/newsfeed_post_status_text_default"
                            android:padding="@dimen/newsfeed_post_content_padding_small"/>
                    </TableRow>
                    <TableRow
                        android:layout_width="0dp">
                        <TextView
                            android:id="@+id/profile_view_info_gender_label"
                            android:text="@string/newsfeed_user_info_page_gender"
                            android:textSize="@dimen/newsfeed_post_status_text_default"
                            android:textStyle="bold"
                            android:layout_gravity="end"
                            android:padding="@dimen/newsfeed_post_content_padding_small"/>
                        <TextView
                            android:id="@+id/profile_view_info_gender_value"
                            android:textSize="@dimen/newsfeed_post_status_text_default"
                            android:padding="@dimen/newsfeed_post_content_padding_small"/>
                    </TableRow>
                    <TableRow
                        android:layout_width="0dp">
                        <TextView
                            android:id="@+id/profile_view_info_join_label"
                            android:text="@string/newsfeed_user_info_page_join"
                            android:textSize="@dimen/newsfeed_post_status_text_default"
                            android:textStyle="bold"
                            android:layout_gravity="end"
                            android:padding="@dimen/newsfeed_post_content_padding_small"/>
                        <TextView
                            android:id="@+id/profile_view_info_join_value"
                            android:textSize="@dimen/newsfeed_post_status_text_default"
                            android:padding="@dimen/newsfeed_post_content_padding_small"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>