<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/settings_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#185263"
            android:gravity="center_vertical|center_horizontal"
            android:padding="16dp"
            android:text="@string/settings_notification_label"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:padding="8dp"
                android:text="@string/settings_cocreation_label"
                android:textSize="16dp"
                android:textStyle="bold" />

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:gravity="left|center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/settings_cocreation_new_room_label" />

                <Spinner
                    android:id="@+id/settings_cocreation_new_room_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.50"
                    android:entries="@array/settings_menu_spinner" />

                <Switch
                    android:id="@+id/settings_cocreation_new_room_toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:theme="@style/SwitchTheme" />


            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:gravity="left|center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/settings_cocreation_join_label" />

                <Spinner
                    android:id="@+id/settings_cocreation_join_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.50"
                    android:entries="@array/settings_menu_spinner" />

                <Switch
                    android:id="@+id/settings_cocreation_join_toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:theme="@style/SwitchTheme" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:gravity="left|center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/settings_cocreation_comment_room_label" />

                <Spinner
                    android:id="@+id/settings_cocreation_comment_room_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.50"
                    android:entries="@array/settings_menu_spinner" />

                <Switch
                    android:id="@+id/settings_cocreation_comment_room_toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:gravity="left|center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/settings_cocreation_invite_room_label" />

                <Spinner
                    android:id="@+id/settings_cocreation_invite_room_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.50"
                    android:entries="@array/settings_menu_spinner" />

                <Switch
                    android:id="@+id/settings_cocreation_invite_room_toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:gravity="left|center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/settings_cocreation_dataset_publication_label" />

                <Spinner
                    android:id="@+id/settings_cocreation_dataset_publication_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.50"
                    android:entries="@array/settings_menu_spinner" />

                <Switch
                    android:id="@+id/settings_cocreation_dataset_publication_toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:padding="8dp"
                android:text="@string/settings_agora_label"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:gravity="left|center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/settings_agora_new_room_label" />

                <Spinner
                    android:id="@+id/settings_agora_new_room_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.50"
                    android:entries="@array/settings_menu_spinner" />

                <Switch
                    android:id="@+id/settings_agora_new_room_toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:gravity="left|center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/settings_agora_comment_room_label" />

                <Spinner
                    android:id="@+id/settings_agora_comment_room_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.50"
                    android:entries="@array/settings_menu_spinner" />

                <Switch
                    android:id="@+id/settings_agora_comment_room_toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:gravity="left|center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/settings_agora_mention_label" />

                <Spinner
                    android:id="@+id/settings_agora_mention_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.50"
                    android:entries="@array/settings_menu_spinner" />

                <Switch
                    android:id="@+id/settings_agora_mention_toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:gravity="left|center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/settings_agora_replay_label" />

                <Spinner
                    android:id="@+id/settings_agora_replay_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.50"
                    android:entries="@array/settings_menu_spinner" />

                <Switch
                    android:id="@+id/settings_agora_replay_toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>